brat/test/golden/kernel/duplicate_abs.brat.golden
Error in test/golden/kernel/duplicate_abs.brat@FC {start = Pos {line = 5, col = 8}, end = Pos {line = 5, col = 12}}:
h2 = { p, p => f(p) }
       ^^^^

  Type error: Variable(s) defined twice: p

